// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Industry can render a disable select 1`] = `
<label id="industryField"
       class="o-forms-field ncf__validation-error"
       for="industry"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      In which industry do you work?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="industry"
            name="industry"
            data-trackable="industry"
            aria-required="true"
            required
            disabled
    >
      <option value>
        Please select an industry
      </option>
      <option value="ACC">
        Accountancy &amp; tax advisory
      </option>
      <option value="DEF">
        Aerospace &amp; defence
      </option>
      <option value="APF">
        Apparel and Fashion
      </option>
      <option value="CAR">
        Automobiles
      </option>
      <option value="BKG">
        Banking
      </option>
      <option value="RES">
        Basic resources/mining
      </option>
      <option value="BIO">
        Biotechnology
      </option>
      <option value="CAP">
        Capital Markets
      </option>
      <option value="PHC">
        Chemicals
      </option>
      <option value="MAP">
        Comms/Publishing/Media
      </option>
      <option value="GAM">
        Computer Games
      </option>
      <option value="BSE">
        Consulting/business services
      </option>
      <option value="COS">
        Cosmetics
      </option>
      <option value="DES">
        Design
      </option>
      <option value="EDU">
        Education/Academia
      </option>
      <option value="ELE">
        Electrical/Electronic Manufacturing
      </option>
      <option value="ENU">
        Energy/utilities
      </option>
      <option value="ENC">
        Engineering/construction
      </option>
      <option value="ENV">
        Environmental Services
      </option>
      <option value="EXE">
        Executive Office
      </option>
      <option value="FSE">
        Financial services
      </option>
      <option value="FOO">
        Food &amp; beverages
      </option>
      <option value="FAM">
        Fund/asset management
      </option>
      <option value="GPV">
        Govt/public service/NGO
      </option>
      <option value="HEA">
        Health &amp; pharmaceuticals
      </option>
      <option value="HOS">
        Hospitality
      </option>
      <option value="IAE">
        Import and Export
      </option>
      <option value="MAN">
        Industrial goods &amp; services
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="INV">
        Investment banking
      </option>
      <option value="IT">
        IT/computing
      </option>
      <option value="ITT">
        IT/Tech/Telecoms
      </option>
      <option value="LAW">
        Legal services
      </option>
      <option value="LUX">
        Luxury goods and jewelry
      </option>
      <option value="MNG">
        Management consultancy
      </option>
      <option value="MEN">
        Mental Healthcare
      </option>
      <option value="MET">
        Mining and Metals
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="OGM">
        Oil/gas/mining
      </option>
      <option value="OUT">
        Outsourcing/Offshoring
      </option>
      <option value="RET">
        Personal &amp; household goods
      </option>
      <option value="PHL">
        Philanthropy
      </option>
      <option value="PLA">
        Plastics
      </option>
      <option value="POL">
        Political organisation
      </option>
      <option value="REA">
        Property
      </option>
      <option value="PUB">
        Public Policy
      </option>
      <option value="REL">
        Public Relations and communications
      </option>
      <option value="REN">
        Renewables and environment
      </option>
      <option value="RTL">
        Retail
      </option>
      <option value="SHI">
        Shipbuilding
      </option>
      <option value="SPG">
        Sporting Goods
      </option>
      <option value="SPO">
        Sports
      </option>
      <option value="STA">
        Staffing and recruiting
      </option>
      <option value="TEL">
        Telecommunications
      </option>
      <option value="TOB">
        Tobacco
      </option>
      <option value="TIE">
        Trade/import/export
      </option>
      <option value="TRL">
        Transport/logistics
      </option>
      <option value="TRV">
        Travel &amp; leisure
      </option>
      <option value="VEN">
        Venture capital and private equity
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your company’s industry
    </span>
  </span>
</label>
`;

exports[`Industry can render an error message 1`] = `
<label id="industryField"
       class="o-forms-field ncf__validation-error"
       for="industry"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      In which industry do you work?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select o-forms-input--invalid">
    <select id="industry"
            name="industry"
            data-trackable="industry"
            aria-required="true"
            required
    >
      <option value>
        Please select an industry
      </option>
      <option value="ACC">
        Accountancy &amp; tax advisory
      </option>
      <option value="DEF">
        Aerospace &amp; defence
      </option>
      <option value="APF">
        Apparel and Fashion
      </option>
      <option value="CAR">
        Automobiles
      </option>
      <option value="BKG">
        Banking
      </option>
      <option value="RES">
        Basic resources/mining
      </option>
      <option value="BIO">
        Biotechnology
      </option>
      <option value="CAP">
        Capital Markets
      </option>
      <option value="PHC">
        Chemicals
      </option>
      <option value="MAP">
        Comms/Publishing/Media
      </option>
      <option value="GAM">
        Computer Games
      </option>
      <option value="BSE">
        Consulting/business services
      </option>
      <option value="COS">
        Cosmetics
      </option>
      <option value="DES">
        Design
      </option>
      <option value="EDU">
        Education/Academia
      </option>
      <option value="ELE">
        Electrical/Electronic Manufacturing
      </option>
      <option value="ENU">
        Energy/utilities
      </option>
      <option value="ENC">
        Engineering/construction
      </option>
      <option value="ENV">
        Environmental Services
      </option>
      <option value="EXE">
        Executive Office
      </option>
      <option value="FSE">
        Financial services
      </option>
      <option value="FOO">
        Food &amp; beverages
      </option>
      <option value="FAM">
        Fund/asset management
      </option>
      <option value="GPV">
        Govt/public service/NGO
      </option>
      <option value="HEA">
        Health &amp; pharmaceuticals
      </option>
      <option value="HOS">
        Hospitality
      </option>
      <option value="IAE">
        Import and Export
      </option>
      <option value="MAN">
        Industrial goods &amp; services
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="INV">
        Investment banking
      </option>
      <option value="IT">
        IT/computing
      </option>
      <option value="ITT">
        IT/Tech/Telecoms
      </option>
      <option value="LAW">
        Legal services
      </option>
      <option value="LUX">
        Luxury goods and jewelry
      </option>
      <option value="MNG">
        Management consultancy
      </option>
      <option value="MEN">
        Mental Healthcare
      </option>
      <option value="MET">
        Mining and Metals
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="OGM">
        Oil/gas/mining
      </option>
      <option value="OUT">
        Outsourcing/Offshoring
      </option>
      <option value="RET">
        Personal &amp; household goods
      </option>
      <option value="PHL">
        Philanthropy
      </option>
      <option value="PLA">
        Plastics
      </option>
      <option value="POL">
        Political organisation
      </option>
      <option value="REA">
        Property
      </option>
      <option value="PUB">
        Public Policy
      </option>
      <option value="REL">
        Public Relations and communications
      </option>
      <option value="REN">
        Renewables and environment
      </option>
      <option value="RTL">
        Retail
      </option>
      <option value="SHI">
        Shipbuilding
      </option>
      <option value="SPG">
        Sporting Goods
      </option>
      <option value="SPO">
        Sports
      </option>
      <option value="STA">
        Staffing and recruiting
      </option>
      <option value="TEL">
        Telecommunications
      </option>
      <option value="TOB">
        Tobacco
      </option>
      <option value="TIE">
        Trade/import/export
      </option>
      <option value="TRL">
        Transport/logistics
      </option>
      <option value="TRV">
        Travel &amp; leisure
      </option>
      <option value="VEN">
        Venture capital and private equity
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your company’s industry
    </span>
  </span>
</label>
`;

exports[`Industry can render an initial selected value 1`] = `
<label id="industryField"
       class="o-forms-field ncf__validation-error"
       for="industry"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      In which industry do you work?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="industry"
            name="industry"
            data-trackable="industry"
            aria-required="true"
            required
    >
      <option value>
        Please select an industry
      </option>
      <option value="ACC">
        Accountancy &amp; tax advisory
      </option>
      <option selected
              value="DEF"
      >
        Aerospace &amp; defence
      </option>
      <option value="APF">
        Apparel and Fashion
      </option>
      <option value="CAR">
        Automobiles
      </option>
      <option value="BKG">
        Banking
      </option>
      <option value="RES">
        Basic resources/mining
      </option>
      <option value="BIO">
        Biotechnology
      </option>
      <option value="CAP">
        Capital Markets
      </option>
      <option value="PHC">
        Chemicals
      </option>
      <option value="MAP">
        Comms/Publishing/Media
      </option>
      <option value="GAM">
        Computer Games
      </option>
      <option value="BSE">
        Consulting/business services
      </option>
      <option value="COS">
        Cosmetics
      </option>
      <option value="DES">
        Design
      </option>
      <option value="EDU">
        Education/Academia
      </option>
      <option value="ELE">
        Electrical/Electronic Manufacturing
      </option>
      <option value="ENU">
        Energy/utilities
      </option>
      <option value="ENC">
        Engineering/construction
      </option>
      <option value="ENV">
        Environmental Services
      </option>
      <option value="EXE">
        Executive Office
      </option>
      <option value="FSE">
        Financial services
      </option>
      <option value="FOO">
        Food &amp; beverages
      </option>
      <option value="FAM">
        Fund/asset management
      </option>
      <option value="GPV">
        Govt/public service/NGO
      </option>
      <option value="HEA">
        Health &amp; pharmaceuticals
      </option>
      <option value="HOS">
        Hospitality
      </option>
      <option value="IAE">
        Import and Export
      </option>
      <option value="MAN">
        Industrial goods &amp; services
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="INV">
        Investment banking
      </option>
      <option value="IT">
        IT/computing
      </option>
      <option value="ITT">
        IT/Tech/Telecoms
      </option>
      <option value="LAW">
        Legal services
      </option>
      <option value="LUX">
        Luxury goods and jewelry
      </option>
      <option value="MNG">
        Management consultancy
      </option>
      <option value="MEN">
        Mental Healthcare
      </option>
      <option value="MET">
        Mining and Metals
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="OGM">
        Oil/gas/mining
      </option>
      <option value="OUT">
        Outsourcing/Offshoring
      </option>
      <option value="RET">
        Personal &amp; household goods
      </option>
      <option value="PHL">
        Philanthropy
      </option>
      <option value="PLA">
        Plastics
      </option>
      <option value="POL">
        Political organisation
      </option>
      <option value="REA">
        Property
      </option>
      <option value="PUB">
        Public Policy
      </option>
      <option value="REL">
        Public Relations and communications
      </option>
      <option value="REN">
        Renewables and environment
      </option>
      <option value="RTL">
        Retail
      </option>
      <option value="SHI">
        Shipbuilding
      </option>
      <option value="SPG">
        Sporting Goods
      </option>
      <option value="SPO">
        Sports
      </option>
      <option value="STA">
        Staffing and recruiting
      </option>
      <option value="TEL">
        Telecommunications
      </option>
      <option value="TOB">
        Tobacco
      </option>
      <option value="TIE">
        Trade/import/export
      </option>
      <option value="TRL">
        Transport/logistics
      </option>
      <option value="TRV">
        Travel &amp; leisure
      </option>
      <option value="VEN">
        Venture capital and private equity
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your company’s industry
    </span>
  </span>
</label>
`;

exports[`Industry render a select with a label 1`] = `
<label id="industryField"
       class="o-forms-field ncf__validation-error"
       for="industry"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      In which industry do you work?
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="industry"
            name="industry"
            data-trackable="industry"
            aria-required="true"
            required
    >
      <option value>
        Please select an industry
      </option>
      <option value="ACC">
        Accountancy &amp; tax advisory
      </option>
      <option value="DEF">
        Aerospace &amp; defence
      </option>
      <option value="APF">
        Apparel and Fashion
      </option>
      <option value="CAR">
        Automobiles
      </option>
      <option value="BKG">
        Banking
      </option>
      <option value="RES">
        Basic resources/mining
      </option>
      <option value="BIO">
        Biotechnology
      </option>
      <option value="CAP">
        Capital Markets
      </option>
      <option value="PHC">
        Chemicals
      </option>
      <option value="MAP">
        Comms/Publishing/Media
      </option>
      <option value="GAM">
        Computer Games
      </option>
      <option value="BSE">
        Consulting/business services
      </option>
      <option value="COS">
        Cosmetics
      </option>
      <option value="DES">
        Design
      </option>
      <option value="EDU">
        Education/Academia
      </option>
      <option value="ELE">
        Electrical/Electronic Manufacturing
      </option>
      <option value="ENU">
        Energy/utilities
      </option>
      <option value="ENC">
        Engineering/construction
      </option>
      <option value="ENV">
        Environmental Services
      </option>
      <option value="EXE">
        Executive Office
      </option>
      <option value="FSE">
        Financial services
      </option>
      <option value="FOO">
        Food &amp; beverages
      </option>
      <option value="FAM">
        Fund/asset management
      </option>
      <option value="GPV">
        Govt/public service/NGO
      </option>
      <option value="HEA">
        Health &amp; pharmaceuticals
      </option>
      <option value="HOS">
        Hospitality
      </option>
      <option value="IAE">
        Import and Export
      </option>
      <option value="MAN">
        Industrial goods &amp; services
      </option>
      <option value="INS">
        Insurance
      </option>
      <option value="INV">
        Investment banking
      </option>
      <option value="IT">
        IT/computing
      </option>
      <option value="ITT">
        IT/Tech/Telecoms
      </option>
      <option value="LAW">
        Legal services
      </option>
      <option value="LUX">
        Luxury goods and jewelry
      </option>
      <option value="MNG">
        Management consultancy
      </option>
      <option value="MEN">
        Mental Healthcare
      </option>
      <option value="MET">
        Mining and Metals
      </option>
      <option value="OTH">
        N/A
      </option>
      <option value="OGM">
        Oil/gas/mining
      </option>
      <option value="OUT">
        Outsourcing/Offshoring
      </option>
      <option value="RET">
        Personal &amp; household goods
      </option>
      <option value="PHL">
        Philanthropy
      </option>
      <option value="PLA">
        Plastics
      </option>
      <option value="POL">
        Political organisation
      </option>
      <option value="REA">
        Property
      </option>
      <option value="PUB">
        Public Policy
      </option>
      <option value="REL">
        Public Relations and communications
      </option>
      <option value="REN">
        Renewables and environment
      </option>
      <option value="RTL">
        Retail
      </option>
      <option value="SHI">
        Shipbuilding
      </option>
      <option value="SPG">
        Sporting Goods
      </option>
      <option value="SPO">
        Sports
      </option>
      <option value="STA">
        Staffing and recruiting
      </option>
      <option value="TEL">
        Telecommunications
      </option>
      <option value="TOB">
        Tobacco
      </option>
      <option value="TIE">
        Trade/import/export
      </option>
      <option value="TRL">
        Transport/logistics
      </option>
      <option value="TRV">
        Travel &amp; leisure
      </option>
      <option value="VEN">
        Venture capital and private equity
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your company’s industry
    </span>
  </span>
</label>
`;
